tests/compile/too_many_bools.rs
use pack_bools::pack_bools;

#[pack_bools(type = u8)]
struct MyBools {
    a: bool,
    b: bool,
    c: bool,
    d: bool,
    e: bool,
    f: bool,
    g: bool,
    h: bool,
    i: bool,
}

fn main() {}
